welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: value lenght is not a member of Array[java.awt.Color]
  for (i <- 0 to Ctab.lenght-1) {
                      ^Array1:26: error: not found: value getHauteurMonde
  recule(getHauteurMonde())
         ^